ghc-6.2/hslibs/win32/Win32Window_stub_ffi.h

extern void* prim_createWindow(LPCTSTR name,char * windowName,DWORD style,int x,int y,int width,int height,HWND hwndParent,HMENU hmenu,HINSTANCE hinst,void * closure);
extern HWND access_prim_createWindow_res1(HsPtr);
extern int access_prim_createWindow_gc_failed(HsPtr);
extern void* access_prim_createWindow_gc_failstring(HsPtr);
extern void* prim_createWindowEx(DWORD estyle,LPCTSTR cls,char * wname,DWORD wstyle,int x,int y,int nWidth,int nHeight,HWND hwndParent,HMENU hmenu,HINSTANCE hinstance,void * closure);
extern HWND access_prim_createWindowEx_res1(HsPtr);
extern int access_prim_createWindowEx_gc_failed(HsPtr);
extern void* access_prim_createWindowEx_gc_failstring(HsPtr);
extern LRESULT prim_defWindowProc(HWND arg1,DWORD arg2,WPARAM arg3,LPARAM arg4);
extern void* prim_getClientRect(HWND arg1);
extern LONG access_prim_getClientRect_gc_res1(HsPtr);
extern LONG access_prim_getClientRect_gc_res2(HsPtr);
extern LONG access_prim_getClientRect_gc_res3(HsPtr);
extern LONG access_prim_getClientRect_gc_res4(HsPtr);
extern int access_prim_getClientRect_gc_failed(HsPtr);
extern void* access_prim_getClientRect_gc_failstring(HsPtr);
extern void* prim_getWindowRect(HWND arg1);
extern LONG access_prim_getWindowRect_gc_res1(HsPtr);
extern LONG access_prim_getWindowRect_gc_res2(HsPtr);
extern LONG access_prim_getWindowRect_gc_res3(HsPtr);
extern LONG access_prim_getWindowRect_gc_res4(HsPtr);
extern int access_prim_getWindowRect_gc_failed(HsPtr);
extern void* access_prim_getWindowRect_gc_failstring(HsPtr);
extern void* prim_invalidateRect(HWND arg1,LPRECT arg2,int arg3);
extern int access_prim_invalidateRect_gc_failed(HsPtr);
extern void* access_prim_invalidateRect_gc_failstring(HsPtr);
extern void* prim_screenToClient(HWND arg1,LONG gc_arg2,LONG gc_arg3);
extern LONG access_prim_screenToClient_gc_res1(HsPtr);
extern LONG access_prim_screenToClient_gc_res2(HsPtr);
extern int access_prim_screenToClient_gc_failed(HsPtr);
extern void* access_prim_screenToClient_gc_failstring(HsPtr);
extern void* prim_clientToScreen(HWND hwnd,LONG gc_arg2,LONG gc_arg3);
extern LONG access_prim_clientToScreen_gc_res1(HsPtr);
extern LONG access_prim_clientToScreen_gc_res2(HsPtr);
extern int access_prim_clientToScreen_gc_failed(HsPtr);
extern void* access_prim_clientToScreen_gc_failstring(HsPtr);