ghc-6.2/hslibs/win32/Win32Window.hs


createWindow :: ClassName -> String -> WindowStyle -> Maybe Pos -> Maybe Pos -> Maybe Pos -> Maybe Pos -> MbHWND -> MbHMENU -> HINSTANCE -> WindowClosure -> IO HWND
createWindow name gc_arg1 style x y width height hwndParent hmenu hinst gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (windowName) ->
  (case x of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just x) -> (return ((x)))
   }) >>= \ (x) ->
  (case y of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just y) -> (return ((y)))
   }) >>= \ (y) ->
  (case width of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just width) -> (return ((width)))
   }) >>= \ (width) ->
  (case height of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just height) -> (return ((height)))
   }) >>= \ (height) ->
  (case hwndParent of {
      Nothing -> (return (nullHANDLE));
      (Just hwndParent) -> (return ((hwndParent)))
   }) >>= \ (hwndParent) ->
  (case hmenu of {
      Nothing -> (return (nullHANDLE));
      (Just hmenu) -> (return ((hmenu)))
   }) >>= \ (hmenu) ->
  (marshall_windowClosure_ gc_arg2) >>= \ (closure) ->
  prim_createWindow name windowName style x y width height hwndParent hmenu hinst closure
  >>= \ gc_result ->
  access_prim_createWindow_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_createWindow" prim_createWindow :: Addr -> Addr -> Word32 -> Int -> Int -> Int -> Int -> Addr -> Addr -> Addr -> FunPtr WindowClosure -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createWindow_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createWindow_gc_failstring :: Addr -> IO (Addr)

-- Freeing the title/window name has been reported
-- to cause a crash, so let's not do it.
-- %end free(windowName)  /* I think this is safe... */

createWindowEx :: WindowStyle -> ClassName -> String -> WindowStyle -> Maybe Pos -> Maybe Pos -> Maybe Pos -> Maybe Pos -> MbHWND -> MbHMENU -> HINSTANCE -> WindowClosure -> IO HWND
createWindowEx estyle cls gc_arg1 wstyle x y nWidth nHeight hwndParent hmenu hinstance gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (wname) ->
  (case x of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just x) -> (return ((x)))
   }) >>= \ (x) ->
  (case y of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just y) -> (return ((y)))
   }) >>= \ (y) ->
  (case nWidth of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just nWidth) -> (return ((nWidth)))
   }) >>= \ (nWidth) ->
  (case nHeight of {
      Nothing -> (return (cW_USEDEFAULT));
      (Just nHeight) -> (return ((nHeight)))
   }) >>= \ (nHeight) ->
  (case hwndParent of {
      Nothing -> (return (nullHANDLE));
      (Just hwndParent) -> (return ((hwndParent)))
   }) >>= \ (hwndParent) ->
  (case hmenu of {
      Nothing -> (return (nullHANDLE));
      (Just hmenu) -> (return ((hmenu)))
   }) >>= \ (hmenu) ->
  (marshall_windowClosure_ gc_arg2) >>= \ (closure) ->
  prim_createWindowEx estyle cls wname wstyle x y nWidth nHeight hwndParent hmenu hinstance closure
  >>= \ gc_result ->
  access_prim_createWindowEx_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createWindowEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createWindowEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_createWindowEx" prim_createWindowEx :: Word32 -> Addr -> Addr -> Word32 -> Int -> Int -> Int -> Int -> Addr -> Addr -> Addr -> FunPtr WindowClosure -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createWindowEx_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createWindowEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createWindowEx_gc_failstring :: Addr -> IO (Addr)

-- see CreateWindow comment.
-- %end free(wname)  /* I think this is safe... */

----------------------------------------------------------------

defWindowProc :: MbHWND -> WindowMessage -> WPARAM -> LPARAM -> IO LRESULT
defWindowProc arg1 arg2 arg3 arg4 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_defWindowProc arg1 arg2 arg3 arg4
  >>= \  res1  ->
  (return (res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_defWindowProc" prim_defWindowProc :: Addr -> Word32 -> Word32 -> Int32 -> IO (Int32)

----------------------------------------------------------------

getClientRect :: HWND -> IO RECT
getClientRect arg1 =
  prim_getClientRect arg1
  >>= \ gc_result ->
  access_prim_getClientRect_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getClientRect_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getClientRect_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getClientRect_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_getClientRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getClientRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2,gc_res3,gc_res4)))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getClientRect" prim_getClientRect :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getClientRect_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getClientRect_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getClientRect_gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getClientRect_gc_res4 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getClientRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getClientRect_gc_failstring :: Addr -> IO (Addr)

getWindowRect :: HWND -> IO RECT
getWindowRect arg1 =
  prim_getWindowRect arg1
  >>= \ gc_result ->
  access_prim_getWindowRect_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getWindowRect_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getWindowRect_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getWindowRect_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_getWindowRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getWindowRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2,gc_res3,gc_res4)))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getWindowRect" prim_getWindowRect :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowRect_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowRect_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowRect_gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowRect_gc_res4 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowRect_gc_failstring :: Addr -> IO (Addr)

-- Should it be MbRECT instead?
invalidateRect :: MbHWND -> MbLPRECT -> Bool -> IO ()
invalidateRect arg1 arg2 gc_arg1 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  (case arg2 of {
      Nothing -> (return (nullAddr));
      (Just arg2) -> (return ((arg2)))
   }) >>= \ (arg2) ->
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_invalidateRect arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_invalidateRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_invalidateRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_invalidateRect" prim_invalidateRect :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_invalidateRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_invalidateRect_gc_failstring :: Addr -> IO (Addr)

screenToClient :: HWND -> POINT -> IO POINT
screenToClient arg1 gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_screenToClient arg1 gc_arg2 gc_arg3
  >>= \ gc_result ->
  access_prim_screenToClient_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_screenToClient_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_screenToClient_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_screenToClient_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_screenToClient" prim_screenToClient :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_screenToClient_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_screenToClient_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_screenToClient_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_screenToClient_gc_failstring :: Addr -> IO (Addr)

clientToScreen :: HWND -> POINT -> IO POINT
clientToScreen hwnd gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_clientToScreen hwnd gc_arg2 gc_arg3
  >>= \ gc_result ->
  access_prim_clientToScreen_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_clientToScreen_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_clientToScreen_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_clientToScreen_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_clientToScreen" prim_clientToScreen :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_clientToScreen_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_clientToScreen_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_clientToScreen_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_clientToScreen_gc_failstring :: Addr -> IO (Addr)
